--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piraten Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img class="background" src="img/PNG/game_background_2/game_background_2.png" alt="">
+    <img class="character" src="img/PNG/2/2_entity_000_ATTACK_002.png" alt="">
+    <button class="BTN">Bewegen</button>
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
